[project]

name = "dl"
version = "0.1.0"
description = "Bulk download files from the internet, with lots of tenacity."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "backoff-utils>=1.0.1",
    "click>=8.1.8",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
